# bible-flashcard-telegram-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  pyproject.toml  telegram_bot.py
